Change your index.html. Add images source inside it. Commit.

--- a/m1/task1.1/index.html
+++ b/m1/task1.1/index.html
@@ -4,4 +4,7 @@
     <meta charset="utf-8">
     <h1>index.html</h1>
   </head>
+  <body>
+     <img src="/images/logo_white-blue.svg" alt="logo epam"> 
+  </body>
 </html>
