add style for image and title

--- a/m2/task2.2/index.html
+++ b/m2/task2.2/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>EPAM DevOps online Winter2022</title>
+    <style>img {  position: absolute; right: 200px; top: 10px; width: 200px} </style>
   </head>
   <body>
-    <img src="16601860_655510134634769_893884238433320540_o.jpg" alt="profile image">.
+    <img alt="profile image" src="16601860_655510134634769_893884238433320540_o.jpg">
+    <h4>Yevhen Lytviak</h4>
     <ul>
         <li><a href="https://aws.amazon.com/getting-started/hands-on/run-serverless-code/">Run a Serverless "Hello, World!"</a></li>
     </ul>
